--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
             const noBtn = document.getElementById('noBtn');
             const screen1 = document.getElementById('screen1');
             if (clickCount <= maxClicks) {
+                console.log(clickCount)
                 screen1.style.backgroundImage = `linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)), url('${clickCount}.jpg')`;
             }
             if (clickCount >= maxClicks) {
