--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             const screen1 = document.getElementById('screen1');
             if (clickCount <= maxClicks) {
                 console.log(clickCount)
+                console.log('${clickCount}.jpg')
                 screen1.style.backgroundImage = `linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)), url('${clickCount}.jpg')`;
             }
             if (clickCount >= maxClicks) {
