--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         <h1 id="mainTitle">Will you be my Valentine? ❤️</h1>
         <div class="btn-group">
             <button id="yesBtn" onclick="nextScreen(2)">Yes 💖</button>
-            <button id="noBtn" onmouseover="handleNo()" onclick="handleNo()">No 🐻</button>
+            <button id="noBtn" onclick="handleNo()">No 🐻</button>
+            
+        <!--//<button id="noBtn" onmouseover="handleNo()" onclick="handleNo()">No 🐻</button>-->
         </div>
     </div>
 
